--- a/Gorillaz5.css
+++ b/Gorillaz5.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     list-style: none;
     text-decoration: none;
     scroll-behavior: smooth;
@@ -63,4 +64,125 @@ header .logo {
 .op-chapter {
     background-color: lightgray;
     height: 100vh;
+}
+
+/* 
+.img-char {
+    display: flex;
+    justify-content: space-between;
+    width: 10%;
+}
+
+.img-char img{
+    display: inline;
+} */
+
+
+/* PRODUCT CARD */
+.albums-go {
+    background-color: antiquewhite;
+    height: 100vh;
+}
+
+.teks {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 50px;
+    color: purple;
+}
+
+.product-card {
+    background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    position: relative;
+    border-radius: 15px;
+    height: 250px;
+    width: 150px;
+    box-shadow: 0 0 10px rgba(254, 4, 4, 0.25);
+    overflow: hidden;
+    filter: grayscale(100%);
+    margin: 80px;
+}
+
+.bio {
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    padding: 10px;
+    color: black;
+    width: 100%;
+    border-radius: 0 0 15px 15px;
+}
+
+.img-card {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    object-fit: cover;
+    cursor: pointer;
+    transition: 0.5s all ease-in-out;
+}
+
+.card:hover .img-card{
+    transform: scale(0.8);
+    transition: 0.5s all ease-in-out;
+}
+
+.card:hover .bio {
+    opacity: 1;
+    transition: 0.5s all ease-in-out;
+}
+/* END PRODUCT CARD */
+
+.iseng{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.iseng-img1 img {
+    width: 40%;
+    filter:grayscale(100%);
+    margin-left: 50px;
+}
+
+.iseng-img2 img {
+    width: 40%;
+    filter: grayscale(100%);
+    margin-left: 50px;
+}
+
+/* FOOTER */
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-ig {
+    font-size: 20px;
+    color: red;
+    margin-right: 20px;
+}
+
+.footer-yt {
+    font-size: 20px;
+    color: red;
+    margin-right: 20px;
+}
+
+.footer-x {
+    font-size: 20px;
+    color: red;
+    margin-right: 20px;
+}
+
+.footer-fb {
+    font-size: 20px;
+    color: red;
+    margin-right: 20px;
 }
