--- a/Gorillaz5.css
+++ b/Gorillaz5.css
@@ -87,7 +87,7 @@ header .logo {
 .teks {
     text-align: center;
     font-size: 20px;
-    padding-top: 50px;
+    padding: 20%;
     color: purple;
 }
 
